--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="redboa-header-container">
             <!--Logo-->
             <div class="logo">
-                <a href="index.html"> <img src="assets/img/logo-mafrox.svg" class="img-fluid" alt="" />
+                <a href="index.html"> <img src="assets/img/logo-mafrox.svg" class="img-fluid" alt="logo" />
                     <!-- <h1>REDBOA <span>STEAK & WINE</span></h1> -->
                 </a>
             </div>
