--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from duruthemes.com/demo/html/redboa/onepage-dark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 18 Feb 2020 16:40:49 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -70,15 +67,25 @@
     <!-- Content -->
     <div class="redboa-side-content">
         <!-- Slider -->
-        <header id="home" class="header pos-re slider-fade">
-            <div class="owl-carousel owl-theme">
+        <header id="home" class="header-video">
+                <video class="" width="800" height="600" autoplay muted loop  >
+                        <source src="assets/img/video/video_boceto_mafrox_2.mp4" type="video/mp4">
+                        <source src="video/video.ogg" type="video/ogg">
+                        <source src="video/video.webm" type="video/webm">
+                        Your browser does not support the video tag.
+                </video>
+                <div class="texto-video">
+                    <div class="icon"><span class="icon flaticon-001-wine"></span></div>
+                    <h4>Welcome to Mafrox</h4>
+                    <h1>RedBoa Steak & Wine</h1>
+                </div>
+            <!-- <div class="owl-carousel owl-theme">
                 <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-home.png">
                     <div class="container text-center v-middle caption">
                         <div class="icon"><span class="icon flaticon-022-tray"></span></div>
                         <h4>VIDEO DE INTRO</h4>
-                        <!-- <h1>RedBoa Steak & Wine</h1> <a href="index.html#menu" class="butn butn-bg"><span>Our Menu</span></a> -->
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-enciclopedia.png">
                     <div class="container text-center v-middle caption">
                         <div class="icon"><span class="icon flaticon-001-wine"></span></div>
@@ -93,7 +100,7 @@
                         <h1>RedBoa Steak & Wine</h1> <a href="index.html#gallery" class="butn butn-bg"><span>Gallery</span></a>
                     </div>
                 </div> -->
-            </div>
+            <!-- </div> -->
         </header>
         <!-- About -->
         <section id="about" class="about pt-80 pb-120">
