--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <source src="video/video.webm" type="video/webm">
                         Your browser does not support the video tag.
                 </video>
-                <div class="texto-video">
-                    <div class="icon"><span class="icon flaticon-001-wine"></span></div>
-                    <h4>Welcome to Mafrox</h4>
-                    <h1>RedBoa Steak & Wine</h1>
+                <div class=" texto-video">
+                    <div class="icon"><span class="icon flaticon-bull-1"></span></div>
+                    <h6>bienvenido a Mafrox</h6>
+                    <h3>Las mejores carnes</h3>
                 </div>
             <!-- <div class="owl-carousel owl-theme">
                 <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-home.png">
@@ -110,7 +110,7 @@
                         <h6 class="sub-title">Del campo a tu mesa</h6>
                         <h4>Bienvenido a <span>MAFROX</span></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <!-- <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p> -->
                     </div>
                     <div class="col-md-4">
                         <div class="about-img mb-20">
