--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                         Your browser does not support the video tag.
                 </video>
                 <div class=" texto-video">
-                    <div class="icon"><span class="icon flaticon-bull-1"></span></div>
-                    <h6>bienvenido a Mafrox</h6>
+                    <!-- <div class="icon"><span class="icon flaticon-bull-1"></span></div> -->
+                    <img src="assets/img/icono_toro.png" alt="" class="torito-home">
+                    <h6>bienvenido a <span> Mafrox</span> </h6>
                     <h3>Las mejores carnes</h3>
                 </div>
             <!-- <div class="owl-carousel owl-theme">
@@ -149,12 +150,12 @@
                                     <div id="tab-4" class="item"> <span class="icon flaticon-001-wine"></span>
                                         <h6>Alimentacion Grano</h6>
                                     </div>
-                                    <div id="tab-5" class="item"> <span class="icon flaticon-025-coffee"></span>
+                                    <!-- <div id="tab-5" class="item"> <span class="icon flaticon-025-coffee"></span>
                                         <h6>Breakfast</h6>
                                     </div>
                                     <div id="tab-6" class="item"> <span class="icon flaticon-016-pancake"></span>
                                         <h6>Dessert</h6>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="menus-content col-md-12">
