--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>MAFROX</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/m.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/fabicon_mafrox.png" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.menu.css" />
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -67,16 +67,22 @@
     <!-- Content -->
     <div class="redboa-side-content">
         <!-- Slider -->
-        <header id="home" class="header-video">
-                <video class="" width="800" height="600" autoplay muted loop  >
+        <header id="home" class="header-video ">
+                <video class="mostrar-desktop" width="800" height="600" autoplay muted loop  >
                         <source src="assets/img/video/video_boceto_mafrox_2.mp4" type="video/mp4">
                         <source src="video/video.ogg" type="video/ogg">
                         <source src="video/video.webm" type="video/webm">
                         Your browser does not support the video tag.
                 </video>
+                <video class="ocultar-desktop" width="800" height="600" autoplay muted loop  >
+                    <source src="assets/img/video/mobile_video_mafrox.mp4" type="video/mp4">
+                    <source src="video/video.ogg" type="video/ogg">
+                    <source src="video/video.webm" type="video/webm">
+                    Your browser does not support the video tag.
+            </video>
                 <div class=" texto-video">
                     <!-- <div class="icon"><span class="icon flaticon-bull-1"></span></div> -->
-                    <img src="assets/img/icono_toro.png" alt="" class="torito-home">
+                    <img src="assets/img/icono_toro.png" alt="" class="torito-home mb-3">
                     <h6>bienvenido a <span> Mafrox</span> </h6>
                     <h3>Las mejores carnes</h3>
                 </div>
@@ -107,7 +113,7 @@
         <section id="about" class="about pt-80 pb-120">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-1">
+                    <div class="col-md-6 offset-md-1 ml-5">
                         <h6 class="sub-title">Del campo a tu mesa</h6>
                         <h4>Bienvenido a <span>MAFROX</span></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -243,7 +249,7 @@
                                     </div>
                                 </div>
                                 <!-- Breakfast -->
-                                <div id="tab-5-content" class="cont">
+                                <!-- <div id="tab-5-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-5">
                                             <div class="menu-info">
@@ -274,9 +280,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- Dessert -->
-                                <div id="tab-6-content" class="cont">
+                                <!-- <div id="tab-6-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-5">
                                             <div class="menu-info">
@@ -307,7 +313,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
