--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>REDBOA</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/m.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/fabicon_mafrox.png" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.menu.css" />
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
