--- a/index.html
+++ b/index.html
@@ -113,18 +113,16 @@
         <section id="about" class="about pt-80 pb-120">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-1 ml-5">
+                    <div class="col-md-6 offset-md-1 ml-5 mt-3">
                         <h6 class="sub-title">Del campo a tu mesa</h6>
                         <h4>Bienvenido a <span>MAFROX</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        <p class="text-justify">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         <!-- <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p> -->
                     </div>
                     <div class="col-md-4">
                         <div class="about-img mb-20">
-                            <div class="img"><img src="assets/img/about1.jpg" alt="img"></div>
-                        </div>
-                        <div class="about-img">
-                            <div class="img"><img src="assets/img/about2.jpg" alt="img"></div>
+                            <div class="img"><img src="assets/img/bienvenido_mafrox.png" alt="img"></div>
                         </div>
                     </div>
                 </div>
