--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section id="about" class="about pt-80 pb-80">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-1 ml-5 mt-3">
+                    <div class="col-md-6 offset-md-1 ml-5 pt-6rem">
                         <h6 class="sub-title">Del campo a tu mesa</h6>
                         <h4>Bienvenido a <span>MAFROX</span></h4>
                         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
