--- a/index.html
+++ b/index.html
@@ -86,28 +86,6 @@
                     <h6>bienvenido a <span> Mafrox</span> </h6>
                     <h3>Las mejores carnes</h3>
                 </div>
-            <!-- <div class="owl-carousel owl-theme">
-                <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-home.png">
-                    <div class="container text-center v-middle caption">
-                        <div class="icon"><span class="icon flaticon-022-tray"></span></div>
-                        <h4>VIDEO DE INTRO</h4>
-                    </div>
-                </div> -->
-                <!-- <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-enciclopedia.png">
-                    <div class="container text-center v-middle caption">
-                        <div class="icon"><span class="icon flaticon-001-wine"></span></div>
-                        <h4>Welcome to REDBOA</h4>
-                        <h1>RedBoa Steak & Wine</h1> <a href="index.html#about" class="butn butn-bg"><span>About Us</span></a>
-                    </div>
-                </div>
-                <div class="item bg-img" data-overlay-dark="7" data-background="assets/img/slider/fondo-alimentacion.png">
-                    <div class="container text-center v-middle caption">
-                        <div class="icon"><span class="icon flaticon-029-cow-1"></span></div>
-                        <h4>Welcome to REDBOA</h4>
-                        <h1>RedBoa Steak & Wine</h1> <a href="index.html#gallery" class="butn butn-bg"><span>Gallery</span></a>
-                    </div>
-                </div> -->
-            <!-- </div> -->
         </header>
         <!-- About -->
         <section id="about" class="about pt-80 pb-80">
@@ -142,24 +120,30 @@
                         <div class="row">
                             <div class="tabs-icon mb-40 col-md-10 offset-md-1 text-center">
                                 <div class="owl-carousel owl-theme">
-                                    <div id="tab-1" class="active item"> <span class="icon flaticon-022-tray"></span>
+                                    <div id="tab-1" class="active item"> 
+                                        <!-- <span class="icon flaticon-022-tray"></span> -->
+                                        <span>
+                                            <img src="assets/img/icono_sello.png" alt="" class="img-aprendiendo">
+                                        </span>
                                         <h6>Nuestro Sello</h6>
                                     </div>
-                                    <div id="tab-2" class="item"> <span class="icon flaticon-034-cow"></span>
+                                    <div id="tab-2" class="item"> 
+                                        <span>
+                                            <img src="assets/img/icono_enciclopedia.png" alt="" class="img-aprendiendo">
+                                        </span>
                                         <h6>Enciclopedia de la carne</h6>
                                     </div>
-                                    <div id="tab-3" class="item"> <span class="icon flaticon-013-salad"></span>
+                                    <div id="tab-3" class="item"> 
+                                        <span>
+                                            <img src="assets/img/icono_pasto.png" alt="" class="img-aprendiendo">                                            
+                                        </span>
                                         <h6>Alimentacion Pasto</h6>
                                     </div>
-                                    <div id="tab-4" class="item"> <span class="icon flaticon-001-wine"></span>
+                                    <div id="tab-4" class="item"> <span>
+                                            <img src="assets/img/icono_grano.png" alt="" class="img-aprendiendo">                                            
+                                    </span>
                                         <h6>Alimentacion Grano</h6>
                                     </div>
-                                    <!-- <div id="tab-5" class="item"> <span class="icon flaticon-025-coffee"></span>
-                                        <h6>Breakfast</h6>
-                                    </div>
-                                    <div id="tab-6" class="item"> <span class="icon flaticon-016-pancake"></span>
-                                        <h6>Dessert</h6>
-                                    </div> -->
                                 </div>
                             </div>
                             <div class="menus-content col-md-12">
@@ -176,12 +160,18 @@
                                 <div id="tab-2-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-10 offset-md-1 mb-40 text-center box-aprendiendo">
-                                            <video class="w-100" width="800" height="600" autoplay muted loop  >
-                                                <source src="assets/img/video/mobile_video_cortes.mp4" type="video/mp4">
-                                                <source src="video/video.ogg" type="video/ogg">
-                                                <source src="video/video.webm" type="video/webm">
-                                                Your browser does not support the video tag.
-                                        </video>
+                                                <video class="mostrar-desktop w-100" width="" height="" autoplay muted loop  >
+                                                    <source src="assets/img/video/video_desktop_corte.mp4" type="video/mp4">
+                                                    <source src="video/video.ogg" type="video/ogg">
+                                                    <source src="video/video.webm" type="video/webm">
+                                                        Your browser does not support the video tag.
+                                                </video>
+                                                <video class="ocultar-desktop w-100" width="" height="" autoplay muted loop  >
+                                                    <source src="assets/img/video/mobile_video_cortes.mp4" type="video/mp4">
+                                                    <source src="video/video.ogg" type="video/ogg">
+                                                    <source src="video/video.webm" type="video/webm">
+                                                    Your browser does not support the video tag.
+                                            </video>
                                         </div>
                                     </div>
                                 </div>
@@ -189,32 +179,10 @@
                                 <div id="tab-3-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <div class="menu-info">
-                                                <h5>Ceaser Salad <span class="price">47$</span></h5>
-                                                <p>Romaine lettuce, croutons, parmigiano, Ceaser dressing.</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Waldorf Salad <span class="price">52$</span></h5>
-                                                <p>Lettuce, celery, apple, grape, walnut, waldorf sauce</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Quinoa & Avocado Salad <span class="price">52$</span></h5>
-                                                <p>Quinoa, avocado, mixed greens. Nuts, dried and fresh fruits</p>
-                                            </div>
+                                            <img src="assets/img/pasto-info1.svg" alt="">
                                         </div>
                                         <div class="col-md-5 offset-md-2">
-                                            <div class="menu-info">
-                                                <h5>Grilled Salmon Salad <span class="price">37$</span></h5>
-                                                <p>Grilled salmon, mixed greens, capers, orange slices</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Chicken Cobb Salad <span class="price">32$</span></h5>
-                                                <p>Iceberg lettuce, cherry tomatoes, blue cheese, avocado, bacon</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Salad Chicken <span class="price">42$</span></h5>
-                                                <p> Ceaser dressing. Optional grilled chicken breast</p>
-                                            </div>
+                                           <img src="assets/img/pasto-info2.svg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -222,32 +190,10 @@
                                 <div id="tab-4-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-5">
-                                            <div class="menu-info">
-                                                <h5>Château d'Yquem 2011 <span class="price">400$</span></h5>
-                                                <p>Dessert Wine, Bordeaux, Graves, Sauternes</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Alvear Cream NV <span class="price">30$</span></h5>
-                                                <p>Dessert, Fortified Wine, Andalucia</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Chateau D'yquem 1990 <span class="price">900$</span></h5>
-                                                <p>Dessert Wine, Bordeaux, Graves, Sauternes</p>
-                                            </div>
+                                            <img src="assets/img/grano-info1.svg" alt="">
                                         </div>
                                         <div class="col-md-5 offset-md-2">
-                                            <div class="menu-info">
-                                                <h5>La Grande Année 2007 <span class="price">400$</span></h5>
-                                                <p>Rosé, Champagne</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>Sine Qua Non 2012 <span class="price">520$</span></h5>
-                                                <p>Syrah, Shiraz & Blends, California</p>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h5>W.S. Keyes Winery 2006 <span class="price">240$</span></h5>
-                                                <p>Merlot, California, Napa, Howell Mountain</p>
-                                            </div>
+                                            <img src="assets/img/grano-info2.svg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -267,35 +213,35 @@
                 </div>
                 <div class="row">
                     <div class="col-md-10 offset-md-1 text-center">
-                <div class="row">
+                        <div class="row">
                     <!-- filter links -->
-                    <div class="filtering text-center mb-20 col-sm-12">
-                        <span data-filter='.parrillero' class="">Parrilleros</span>
-                        <span data-filter='.guisos'>Guisos</span>
-                        <span data-filter='.sancochados'>Sancochados</span>
-                        <span data-filter='.especiales'>Especiales</span>
-                        <span data-filter='.procesados'>Procesados</span>
-                    </div>
-                    <div class="clearfix"></div>
+                            <div class="filtering text-center mb-20 col-sm-12">
+                                <span data-filter='.parrillero' class="">Parrilleros</span>
+                                <span data-filter='.guisos'>Guisos</span>
+                                <span data-filter='.sancochados'>Sancochados</span>
+                                <span data-filter='.especiales'>Especiales</span>
+                                <span data-filter='.procesados'>Procesados</span>
+                            </div>
+                            <div class="clearfix"></div>
                     <!-- gallery -->
-                    <div class="gallery text-center full-width">
-                        <div class="col-md-4 items guisos">
+                         <div class="gallery text-center full-width">
+                            <div class="col-md-4 items guisos">
                            <!-- <a href="assets/img/cortes/carne1.png" class="popimg"> -->
-                            <div class="item-img">
-                                <img src="assets/img/cortes/parrillera_1.png" alt="image">
-                                <div class="item-img-overlay valign">
-                                    <div class="overlay-info full-width vertical-center">
-                                        <h6>BISTECK DE CUADRIL</h6>
-                                        <p>Ideal para parrillas al horno y estufa.</p>
-                                        <div>
-                                            <a href=""><img src="assets/img/blog/jumbo.png" alt=""></a>
-                                            <a href=""><img src="assets/img/blog/metro.png" alt=""></a>
-                                            <a href=""><img src="assets/img/blog/wong.png" alt=""></a>
+                                <div class="item-img">
+                                    <img src="assets/img/cortes/parrillera_1.png" alt="image">
+                                    <div class="item-img-overlay valign">
+                                        <div class="overlay-info full-width vertical-center">
+                                            <h6>BISTECK DE CUADRIL</h6>
+                                            <p>Ideal para parrillas al horno y estufa.</p>
+                                            <div>
+                                                <a href=""><img src="assets/img/blog/jumbo.png" alt=""></a>
+                                                <a href=""><img src="assets/img/blog/metro.png" alt=""></a>
+                                                <a href=""><img src="assets/img/blog/wong.png" alt=""></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <div class="col-md-4 items especiales">
                             <!-- <a href="assets/img/cortes/carne1.png" class="popimg"> -->
                              <div class="item-img">
