--- a/index.html
+++ b/index.html
@@ -599,20 +599,20 @@
                                 <div class="col-md-6">
                                     <div class="item">
                                         <div class="cont">
-                                            <h5>OXAPAMPA</h5>
+                                            <img src="assets/img/lim.svg" alt="" class="lim mb-2">
                                             <p>Lorem ipsum dolor sit amet 
                                                 <br />dolor sit amet</p>
-                                                <h6>111222334</h6>
+                                                <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="item">
                                         <div class="cont">
-                                            <h5>LIMA</h5>
+                                            <img src="assets/img/oxa.svg" alt="" class="oxa mb-2">
                                             <p>Lorem ipsum dolor sit amet 
                                                     <br />dolor sit amet</p>
-                                            <h6>1122233444</h6>
+                                            <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
                                 </div>
