--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             </div>
         </section>
         <!-- Blog -->
-        <section id="blog" class="blog pt-80 pb-120">
+        <section id="blog" class="blog pt-80 pb-120 bg-fixed pos-re" data-overlay-dark="7" data-background="assets/img/fondo_pantalla_mafrox.png">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 offset-md-1 mb-60 text-center">
