--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <div id="tab-2-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-10 offset-md-1 mb-40 text-center box-aprendiendo">
-                                            <video class="mostrar-desktop w-100" width="" height="" autoplay muted loop>
+                                            <video class="mostrar-desktop w-100" width="" height="" controls autoplay muted loop>
                                                 <source src="assets/img/video/video_desktop_corte.mp4" type="video/mp4">
                                                 <source src="video/video.ogg" type="video/ogg">
                                                 <source src="video/video.webm" type="video/webm">
