video control mobile

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                                 <source src="video/video.webm" type="video/webm">
                                                 Your browser does not support the video tag.
                                             </video>
-                                            <video class="ocultar-desktop w-100" width="" height="" autoplay muted loop>
+                                            <video class="ocultar-desktop w-100" width="" height="" controls autoplay muted loop>
                                                 <source src="assets/img/video/mobile_video_cortes.mp4" type="video/mp4">
                                                 <source src="video/video.ogg" type="video/ogg">
                                                 <source src="video/video.webm" type="video/webm">
