--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,8 @@
                                     <div class="item">
                                         <div class="cont">
                                             <img src="assets/img/lim.svg" alt="" class="lim mb-2">
-                                            <p>Lorem ipsum dolor sit amet
-                                                <br />dolor sit amet</p>
+                                            <p>Calle 2 de Mayo 524
+                                                <br />Miraflores - Lima, Perú</p>
                                             <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
@@ -1157,8 +1157,8 @@
                                     <div class="item">
                                         <div class="cont">
                                             <img src="assets/img/oxa.svg" alt="" class="oxa mb-2">
-                                            <p>Lorem ipsum dolor sit amet
-                                                <br />dolor sit amet</p>
+                                            <p>Carretera a Pozuzo km 5
+                                                <br />zona bajo Santa Clara</p>
                                             <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
