filtrado de cortes

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
                         <div class="row">
                             <!-- filter links -->
                             <div class="filtering text-center mb-20 col-sm-12">
-                                <span data-filter='.parrillero' class="">Parrilleros</span>
+                                <span id="btn-parrillero" data-filter='.parrillero' class="active">Parrilleros</span>
                                 <span id="btn-bistecs-sarten" data-filter='.bistecs-sarten'>Bistecs Sartén</span>
-                                <span data-filter='.guisos'>Guisos</span>
-                                <span data-filter='.sancochados'>Sancochados</span>
-                                <span data-filter='.especiales'>Especiales</span>
-                                <span data-filter='.procesados'>Procesados</span>
+                                <span id="btn-guisos" data-filter='.guisos'>Guisos</span>
+                                <span id="btn-sancochados" data-filter='.sancochados'>Sancochados</span>
+                                <span id="btn-especiales" data-filter='.especiales'>Especiales</span>
+                                <span  id="btn-procesados"data-filter='.procesados'>Procesados</span>
                             </div>
                             <div class="clearfix"></div>
                             <!-- gallery -->
@@ -647,7 +647,7 @@
                                 </div>
                                 </div>
                                 <!-- Guisos -->
-                                <div id="guisos">
+                                <div id="guisos"  class="hide">
                                 <div class="col-md-4 items guisos">
                                     <!-- <a href="assets/img/cortes/carne1.png" class="popimg"> -->
                                     <div class="item-img">
@@ -718,7 +718,7 @@
                                 </div>
                             </div>
                                    <!-- Sancochados -->
-                                   <div id="sancochados">
+                                   <div id="sancochados"  class="hide">
                                    <div class="col-md-4 items sancochados">
                                     <!-- <a href="assets/img/cortes/carne2.png" class="popimg"> -->
                                     <div class="item-img">
@@ -841,7 +841,7 @@
                             </div>
 
                                 <!-- ESPECIALES -->
-                                <div id="especiales">
+                                <div id="especiales" class="hide">
                                 <div class="col-md-4 items especiales">
                                     <!-- <a href="assets/img/cortes/carne1.png" class="popimg"> -->
                                     <div class="item-img">
@@ -949,7 +949,7 @@
                                 </div>
                             </div>
                              <!-- Procesados -->
-                               <div id="procesados">
+                               <div id="procesados" class="hide">
                                 <div class="col-md-4 items procesados">
                                     <!-- <a href="assets/img/cortes/carne2.png" class="popimg"> -->
                                     <div class="item-img">
@@ -1158,8 +1158,8 @@
                                     <div class="item">
                                         <div class="cont">
                                             <img src="assets/img/lim.svg" alt="" class="lim mb-2">
-                                            <p>Calle 2 de Mayo 524
-                                                <br />Miraflores - Lima, Perú</p>
+                                            <p>Lorem ipsum dolor sit amet
+                                                <br />dolor sit amet</p>
                                             <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
@@ -1168,8 +1168,8 @@
                                     <div class="item">
                                         <div class="cont">
                                             <img src="assets/img/oxa.svg" alt="" class="oxa mb-2">
-                                            <p>Carretera a Pozuzo km 5
-                                                <br />zona bajo Santa Clara</p>
+                                            <p>Lorem ipsum dolor sit amet
+                                                <br />dolor sit amet</p>
                                             <h6>(063) 750-023</h6>
                                         </div>
                                     </div>
